# hledger-mcp-for-cowork

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  mise.toml  rust-toolchain.toml
.claude/: hookify.rust-quality-checks.local.md  settings.json
.claude/hooks/: rust-quality-gate.sh
.github/workflows/: ci.yml
docs/development/: README.md  chart-of-accounts.md  concurrency-model.md  hledger-rearchitecture.md  mcp-protocol-versions.md  model-options.md  tool-design.md
docs/development/milestones/: M0-mvp-walking-skeleton.md  M1-hledger-read-adapter.md  M2-write-path-git-epoch.md  M3-concurrency-epoch-cas.md  M4-domain-tools-chart-of-accounts.md  M5-tool-tiering-resources-profiles.md  M6-live-gui-http-linux-packaging.md  README.md
proofs/tla/: Ledger.cfg  Ledger.tla  Ledger_live.cfg  mutate.py
src/: catalog.rs  domain.rs  epoch.rs  flags.rs  git.rs  lib.rs  logging.rs  main.rs  protocol.rs  resources.rs  server.rs  tools.rs
src/hledger/: amount.rs  cli.rs  json.rs  mod.rs  runner.rs
src/resources/: account-guide.md  budget-guide.md  eco-guide.md  expected-chart.md  instructions.md  session-context.md  vendor-guide.md
src/write/: budget.rs  format.rs  input.rs  mod.rs  validate.rs
tests/: concurrency.rs  mcp_stdio.rs  smoke.rs
tests/fixtures/: balance_all.json  balance_single.json  balancesheet_basic.json  budget_basic.json  domain.journal  incomestatement_basic.json  print_basic.json  register_ap_aging.json  register_basic.json  sample.journal
