[package]
name = "hledger-mcp-for-cowork"
version = "0.1.0"
edition = "2024"
description = "An hledger MCP (model context protocol) implementation for Claude Cowork"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "process", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-log = "0.6.0"
