[package]
name = "hledger-mcp-for-cowork"
version = "0.1.0"
edition = "2024"
description = "An hledger MCP (model context protocol) implementation for Claude Cowork"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
uuid = { version = "1.18.1", features = ["v4"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "process", "signal", "sync"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-log = "0.6.0"
